--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+* {
+  font-family: 'Press Start 2P', cursive;
+}
+
 .App {
   height: 100vh;
   margin:0;
